Add code explanation feature to GitHub extension with UI and API integration

--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,22 @@
 {
-    "manifest_version": 3,
-    "name": "GitHub Llama Connector",
-    "version": "1.0",
-    "description": "Fetches code from GitHub and processes it with a local Llama model.",
-    "permissions": ["storage", "activeTab", "scripting"],
-    "host_permissions": ["https://api.github.com/*"],
-    "background": {
-      "service_worker": "background.js"
-    },
-    "action": {
-      "default_popup": "popup.html",
-      "default_icon": "icon.png"
+  "manifest_version": 3,
+  "name": "GitHub Code Explainer",
+  "version": "1.0",
+  "description": "Explains code in GitHub files using AI",
+  "permissions": ["activeTab", "storage", "scripting"],
+  "host_permissions": ["https://github.com/*"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://github.com/*"],
+      "js": ["content.js"],
+      "run_at": "document_idle"
     }
+  ],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": "icon.png"
   }
-  
+}
