--- a/manifest.json
+++ b/manifest.json
@@ -20,8 +20,8 @@
     "default_icon": "icons/icon.png"
   },
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "icon.jpg"
+    // "48": "icons/icon48.png",
+    // "128": "icons/icon128.png"
   }
 }
