--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,8 @@
     "default_popup": "popup.html",
     "default_icon": {
     "16": "icons/icon16.png",
-    "48": "icons/icon48.png"
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
     }
   },
   "content_scripts": [
@@ -28,11 +29,12 @@
   ],
   "icons": {
     "16": "icons/icon16.png",
-    "48": "icons/icon48.png"
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   },
   "web_accessible_resources": [
     {
-    "resources": ["icons/icon2.png"],
+    "resources": ["icons/icon128.png"],
     "matches": ["<all_urls>"]
     }
   ]
